I SWEAR THIS IS THE LAST CHANGE

--- a/myWebsite/Bio_Page.html
+++ b/myWebsite/Bio_Page.html
@@ -57,7 +57,7 @@
     <body>
         <h1>Info!:</h1>
         <a href="https://chrisaqui.github.io/myWebsite/Home_Page.html">HOME</a>
-        <a href="https://chrisaqui.github.io/myWebsite/Bio_Page.html">PORTFOLIO</a>
+        <a href="https://chrisaqui.github.io/myWebsite/Portflio_Page.html">PORTFOLIO</a>
         <div>
           <center>
             
